--- a/_scss/_pagelayout.scss
+++ b/_scss/_pagelayout.scss
@@ -1,155 +1,137 @@
 // TODO: These layouts will be split into own stylesheets with simplified class names
-
 .pagelayout {
-  // Layout with ToC and side panels
-  &__docpanels {
-    display: grid;
-    grid-template-columns: min-content minmax(0px, max-content);
-    grid-column-gap: $container-padding;
-    word-wrap: break-word;
-    overflow-x: auto;
-    width: 100%;
-    @media (min-width: $breakpoint-xl) {
-      grid-template-columns: 280px 6fr 250px;
-      grid-column-gap: $container-padding;
-    }
-
-    &__content {
-      max-width: 800px;
-      max-height: var(--body-height);
-      overflow-y: auto;
-    }
-  }
-
-  // Centered layout with ToC and side panels
-  &__centerdocs {
-    display: grid;
-    grid-template-columns: min-content minmax(0px, max-content);
-    grid-column-gap: $container-padding;
-    word-wrap: break-word;
-    overflow-x: auto;
-    width: 100%;
-
-    @media (min-width: $breakpoint-xl) {
-      grid-template-columns: 280px 1fr;
-      grid-column-gap: 14px;
-    }
-
-    &__wrapper {
-      margin-left: auto;
-      margin-right: auto;
-      @media (min-width: $breakpoint-xl) {
+    // Layout with ToC and side panels
+    &__docpanels {
         display: grid;
-        grid-template-columns: minmax(600px, 800px) 250px;
+        grid-template-columns: min-content minmax(0px, max-content);
         grid-column-gap: $container-padding;
-      }
+        word-wrap: break-word;
+        overflow-x: auto;
+        width: 100%;
+        @media (min-width: $breakpoint-xl) {
+            grid-template-columns: 280px 6fr 250px;
+            grid-column-gap: $container-padding;
+        }
+        &__content {
+            max-width: 800px;
+            max-height: var(--body-height);
+            overflow-y: auto;
+        }
     }
-
-    &__content {
-      max-height: var(--body-height);
-      overflow-y: auto;
+    // Centered layout with ToC and side panels
+    &__centerdocs {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-column-gap: $container-padding;
+        word-wrap: break-word;
+        overflow-x: auto;
+        width: 100%;
+        @media (min-width: $breakpoint-md) {
+            grid-template-columns: 280px 1fr;
+            grid-column-gap: 14px;
+        }
+        &__wrapper {
+            margin-left: auto;
+            margin-right: auto;
+            @media (min-width: $breakpoint-xl) {
+                display: grid;
+                grid-template-columns: minmax(600px, 800px) 250px;
+                grid-column-gap: $container-padding;
+            }
+        }
+        &__content {
+            max-height: var(--body-height);
+            overflow-y: auto;
+            @media (max-width: $breakpoint-md) {
+                padding: 20px;
+            }
+        }
     }
-
-  }
-
     // Large docs layout with ToC 
     &__largedocs {
-      display: grid;
-      grid-template-columns: min-content minmax(0px, max-content);
-      grid-column-gap: $container-padding;
-      word-wrap: break-word;
-      overflow-x: auto;
-      width: 100%;
-  
-      @media (min-width: $breakpoint-xl) {
-        grid-template-columns: 280px 1fr;
-        grid-column-gap: 14px;
-      }
-
-      &__wrapper {
-        max-width: 100%;
-        margin-left: auto;
-        margin-right: auto;
-      }
-    
-      &__content {
-        max-height: var(--body-height);
-        overflow-y: auto;
-      }
-
-      &__hidden {
-        display: none;
-      }
-  
+        display: grid;
+        grid-template-columns: min-content minmax(0px, max-content);
+        grid-column-gap: $container-padding;
+        word-wrap: break-word;
+        overflow-x: auto;
+        width: 100%;
+        @media (min-width: $breakpoint-xl) {
+            grid-template-columns: 280px 1fr;
+            grid-column-gap: 14px;
+        }
+        &__wrapper {
+            max-width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        &__content {
+            max-height: var(--body-height);
+            overflow-y: auto;
+        }
+        &__hidden {
+            display: none;
+        }
     }
-
-  // Layout for Release Notes
-
-  &__index {
-    &__container {
-      width: 100%;
+    // Layout for Release Notes
+    &__index {
+        &__container {
+            width: 100%;
+        }
+        &__content {
+            display: grid;
+            grid-template-columns: 280px auto;
+            grid-column-gap: $container-padding;
+        }
+        &__items {
+            max-height: var(--body-height);
+            overflow-y: auto;
+        }
+        &__header {
+            margin-bottom: 1em;
+            padding-bottom: 1em;
+            border-bottom: 1px solid $border-color;
+        }
+        &__item {
+            margin-bottom: 1em;
+            padding-bottom: 1em;
+            border-bottom: 1px solid $border-color;
+        }
+        &__title {
+            font-size: 1.2rem;
+            @media (min-width: $breakpoint-lg) {
+                font-size: 1.6rem;
+            }
+        }
+        &__meta {
+            font-size: 0.75rem;
+        }
+        &__excerpt {
+            font-size: 1rem;
+        }
+        &__link {
+            font-size: 0.75rem;
+            text-decoration: underline;
+        }
     }
-    &__content {
-      display: grid;
-      grid-template-columns: 280px auto;
-      grid-column-gap: $container-padding;
+    // General layout
+    &__page {
+        &__container {
+            width: 100%;
+            &__inner {
+                padding-left: $container-padding;
+                padding-right: $container-padding;
+                max-height: var(--body-height);
+                overflow-y: auto;
+            }
+        }
     }
-    &__items {
-      max-height: var(--body-height);
-      overflow-y: auto;
+    &__landingpage {
+        &__container {
+            width: 100%;
+            &__inner {
+                max-height: var(--body-height);
+                overflow-y: auto;
+            }
+        }
     }
-
-    &__header {
-      margin-bottom: 1em;
-      padding-bottom: 1em;
-      border-bottom: 1px solid $border-color;
-    }
-    &__item {
-      margin-bottom: 1em;
-      padding-bottom: 1em;
-      border-bottom: 1px solid $border-color;
-    }
-    &__title {
-      font-size: 1.2rem;
-      @media (min-width: $breakpoint-lg) {
-        font-size: 1.6rem;
-      }
-    }
-    &__meta {
-      font-size: 0.75rem;
-    }
-    &__excerpt {
-      font-size: 1rem;
-    }
-    &__link {
-      font-size: 0.75rem;
-      text-decoration: underline;
-    }
-  }
-
-  // General layout
-
-  &__page {
-    &__container {
-      width: 100%;
-      &__inner {
-        padding-left: $container-padding;
-        padding-right: $container-padding;
-        max-height: var(--body-height);
-        overflow-y: auto;
-      }
-    }
-  }
-
-  &__landingpage {
-    &__container {
-      width: 100%;
-
-      &__inner {
-        max-height: var(--body-height);
-        overflow-y: auto;
-      }
-    }
-  }
-
 }
